k8s/overlays/dev/mercury/mercury.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mercury
  labels:
    name: mercury
    app: musicgang-dev-mercury
    kind: namespace
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: mercury
  labels:
    name: nginx-ingress
    app: musicgang-dev-mercury
    kind: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: mercury.musicgang.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: musicgang-api-service
                port:
                  number: 8888
